--- a/app/src/main/res/drawable/shape_progressbar.xml
+++ b/app/src/main/res/drawable/shape_progressbar.xml
@@ -11,7 +11,7 @@
                 <gradient android:type="linear"
                     android:angle="0"
                     android:endColor="@color/white"
-                    android:startColor="@color/clean_trash_bg"/>
+                    android:startColor="@color/clean_trash_bg_red"/>
             </shape>
         </clip>
     </item>
