--- a/app/src/main/res/layout/activity_clean_result.xml
+++ b/app/src/main/res/layout/activity_clean_result.xml
@@ -6,26 +6,97 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:fitsSystemWindows="true"
     tools:context="com.jb.filemanager.function.trash.CleanResultActivity">
 
+    <include
+        android:id="@+id/ll_title"
+        layout="@layout/common_action_bar_without_search"/>
+
+    <RelativeLayout
+        android:id="@+id/rl_blue_rect"
+        android:layout_height="120dp"
+        android:layout_below="@+id/ll_title"
+        android:layout_width="match_parent"
+        android:background="@color/clean_trash_bg_blue">
+
+        <TextView
+            android:id="@+id/tv_trash_size_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:textColor="@color/white"
+            android:textSize="48dp"
+            tools:text="328"/>
+
+        <TextView
+            android:id="@+id/tv_trash_size_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="115dp"
+            android:layout_marginStart="115dp"
+            android:layout_marginTop="40dp"
+            android:text="MB"
+            android:textColor="@color/white"/>
+
+        <TextView
+            android:id="@+id/tv_trash_suggest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_trash_size_unit"
+            android:layout_marginLeft="115dp"
+            android:layout_marginStart="115dp"
+            android:text="Suggest"
+            android:textColor="@color/white"/>
+    </RelativeLayout>
 
     <LinearLayout
+        android:orientation="vertical"
+        android:layout_marginTop="120dp"
+        android:layout_below="@+id/ll_title"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <ImageView
-            android:id="@+id/iv_clean_button_translate"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:visibility="invisible"
-            android:src="@drawable/shape_red_circle"
-            android:tag="image_share"/>
+            android:id="@+id/iv_clean_result_button_blue"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="90dp"
+            android:src="@drawable/trash_clean_icon_blue"
+            android:visibility="invisible"/>
+
+        <TextView
+            android:id="@+id/tv_clean_result_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:text="328"
+            android:textColor="@color/black_70"
+            android:textSize="48dp"/>
+
+        <TextView
+            android:id="@+id/tv_clean_result_size_unit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:text="MB"
+            android:textColor="@color/black_40"
+            android:textSize="16dp"/>
+
+        <TextView
+            android:id="@+id/tv_clean_result_cleaned"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="2dp"
+            android:text="Cleaned"
+            android:textColor="@color/black_40"
+            android:textSize="16dp"/>
     </LinearLayout>
-    <com.jb.filemanager.ui.view.TranslateImageView
-        android:id="@+id/iv_clean_button"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:tag="image_share"/>
+
 </RelativeLayout>
