--- a/app/src/main/res/layout/common_action_bar_without_search.xml
+++ b/app/src/main/res/layout/common_action_bar_without_search.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_title"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:orientation="horizontal"
+    android:layout_height="56dp"
+    android:orientation="vertical"
     tools:background="@color/colorAccent">
 
     <TextView
         android:id="@+id/tv_common_action_bar_title"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
         android:drawableLeft="@drawable/action_bar_back_drawable_selector"
         android:drawablePadding="17dp"
         android:paddingLeft="17dp"
@@ -19,4 +19,9 @@
         android:text="@string/clean_storage"
         android:textColor="@drawable/action_bar_back_text_selector"
         android:textSize="16dp"/>
+    
+    <View
+        android:background="@drawable/main_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
 </LinearLayout>
