--- a/app/src/main/res/layout/item_main_storage_grid_style.xml
+++ b/app/src/main/res/layout/item_main_storage_grid_style.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="SpUsage,ContentDescription"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="90dp"
+    android:minHeight="90dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,8 +13,9 @@
 
         <ImageView
             android:id="@+id/iv_main_storage_style_grid_item_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="19dp"
             android:layout_gravity="center" />
 
         <TextView
@@ -22,9 +23,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="1dp"
-            android:textColor="#123456"
-            android:textSize="16dp" />
+            android:layout_marginTop="4dp"
+            android:gravity="center_horizontal"
+            android:textColor="#B2000000"
+            android:textSize="10dp" />
 
     </LinearLayout>
 
@@ -33,6 +35,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|top"
+        android:paddingTop="8dp"
+        android:paddingRight="8dp"
+        android:paddingEnd="8dp"
+        android:paddingLeft="0dp"
+        android:paddingStart="0dp"
         android:src="@drawable/main_storage_style_list_item_check_box_selector"/>
 
 </FrameLayout>
