--- a/app/src/main/res/layout/group_zip_file.xml
+++ b/app/src/main/res/layout/group_zip_file.xml
@@ -1,18 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="40dp"
-              android:orientation="horizontal">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:minHeight="40dp"
+                android:orientation="horizontal">
 
     <TextView
         android:id="@+id/group_zip_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_blue_light"/>
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:textColor="#66000000"
+        android:textSize="12dp"/>
 
     <ImageView
         android:id="@+id/group_zip_iv"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:contentDescription="@null"/>
-</LinearLayout>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:contentDescription="@null"
+        android:padding="12dp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:background="#e7e9f3"/>
+</RelativeLayout>
