--- a/app/src/main/res/layout/dialog_zip_file_detail.xml
+++ b/app/src/main/res/layout/dialog_zip_file_detail.xml
@@ -1,34 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="300dp"
-              android:layout_height="280dp"
-              android:background="@android:color/white"
+              android:layout_width="320dp"
+              android:layout_height="218dp"
+              android:background="@drawable/white_2_dp_corner_bg"
               android:orientation="vertical">
 
     <TextView
         android:id="@+id/file_name"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:textColor="@android:color/holo_blue_light"/>
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="21dp"
+        android:textColor="#b3000000"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/btn_view"
         android:layout_width="wrap_content"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="14dp"
+        android:gravity="center_vertical"
         android:text="View"
-        android:textColor="@android:color/holo_blue_light"/>
+        android:textColor="#ff39bdac"
+        android:textSize="16dp"/>
 
     <TextView
         android:id="@+id/btn_extract"
         android:layout_width="wrap_content"
-        android:layout_height="25dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:gravity="center_vertical"
         android:text="Extract"
-        android:textColor="@android:color/holo_blue_light"/>
+        android:textColor="#ff39bdac"
+        android:textSize="16dp"/>
 
     <TextView
         android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:gravity="center_vertical"
         android:text="Cancel"
-        android:textColor="@android:color/holo_blue_light"/>
+        android:textColor="#ff39bdac"
+        android:textSize="16dp"/>
 </LinearLayout>
