--- a/app/src/main/res/layout/dialog_zip_pass_input.xml
+++ b/app/src/main/res/layout/dialog_zip_pass_input.xml
@@ -1,25 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="320dp"
+                android:layout_height="244dp"
+                android:background="@drawable/white_2_dp_corner_bg"
+                android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/dialog_pass_in_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="21dp"
+        android:text="Password Required"
+        android:textColor="#b3000000"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/dialog_pass_in_des"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="69dp"
+        android:text="This archive is encrypted.Enter password to access its content."
+        android:textColor="#b3000000"
+        android:textSize="14dp"/>
 
     <EditText
         android:id="@+id/dialog_zip_pass_in_et"
         android:layout_width="match_parent"
-        android:layout_height="30dp"/>
+        android:layout_height="40dp"
+        android:textColor="#b3000000"
+        android:singleLine="true"
+        android:layout_marginEnd="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="113dp"
+        android:gravity="center_vertical"
+        android:hint="Enter password"/>
+
+    <TextView
+        android:id="@+id/show_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="161dp"
+        android:drawableLeft="@drawable/select_all"
+        android:drawablePadding="10dp"
+        android:text="Show password"
+        android:textColor="#b3000000"
+        android:textSize="12dp"/>
 
     <TextView
         android:id="@+id/dialog_zip_pass_in_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="36dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="center"
         android:text="@string/common_ok"
-        android:textSize="20dp"/>
+        android:textColor="#398dac"
+        android:textSize="16dp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/dialog_zip_pass_in_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="36dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginRight="96dp"
+        android:gravity="center"
         android:text="@string/common_cancel"
-        android:textSize="20dp"/>
-</LinearLayout>
+        android:textColor="#b3000000"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+</RelativeLayout>
