--- a/app/src/main/res/layout/item_main_storage_list_dir.xml
+++ b/app/src/main/res/layout/item_main_storage_list_dir.xml
@@ -6,6 +6,10 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="@drawable/bg_item_main_content_list_style_dir"
+    android:paddingRight="16dp"
+    android:paddingEnd="16dp"
+    android:paddingLeft="0dp"
+    android:paddingStart="0dp"
     android:gravity="center"
     android:textColor="#66000000"
     android:textSize="12dp">
