--- a/app/src/main/res/layout/dialog_zip_pass_input.xml
+++ b/app/src/main/res/layout/dialog_zip_pass_input.xml
@@ -18,6 +18,23 @@
         android:textStyle="bold"/>
 
     <TextView
+        android:id="@+id/dialog_pass_in_wrong_tip"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginEnd="24dp"
+        android:paddingLeft="8dp"
+        android:layout_marginTop="21dp"
+        android:background="@drawable/red_2_dp_corner_bg"
+        android:gravity="center_vertical"
+        android:text="Invalid Password"
+        android:textColor="@android:color/white"
+        android:textSize="12dp"
+        android:visibility="gone"/>
+
+    <TextView
         android:id="@+id/dialog_pass_in_des"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,24 +51,33 @@
         android:id="@+id/dialog_zip_pass_in_et"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:textColor="#b3000000"
-        android:singleLine="true"
         android:layout_marginEnd="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="113dp"
         android:gravity="center_vertical"
-        android:hint="Enter password"/>
+        android:hint="Enter password"
+        android:inputType="textPassword"
+        android:singleLine="true"
+        android:textColor="#b3000000"/>
 
-    <TextView
-        android:id="@+id/show_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/show_pass_btn"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp"
+        android:src="@drawable/select_none"
         android:layout_marginTop="161dp"
-        android:drawableLeft="@drawable/select_all"
+        android:contentDescription="@null"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="161dp"
         android:drawablePadding="10dp"
         android:text="Show password"
         android:textColor="#b3000000"
