--- a/app/src/main/res/layout/breadcrumb_item.xml
+++ b/app/src/main/res/layout/breadcrumb_item.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="34dp"
-    android:layout_marginRight="16dp"
-    android:orientation="horizontal" >
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="40dp"
+              android:gravity="center_vertical"
+              android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="16dp"
         android:clickable="false"
         android:contentDescription="@null"
-        android:src="@drawable/breadcrumb_arrow" />
+        android:rotation="-90"
+        android:src="@drawable/down"/>
 
     <TextView
         android:id="@+id/item"
@@ -24,13 +24,11 @@
         android:background="@drawable/breadcrumb_item_selector"
         android:duplicateParentState="true"
         android:paddingBottom="1dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
         android:paddingTop="1dp"
         android:singleLine="true"
         android:text="sdcard"
-        android:textColor="#FFFFFFFF"
-        android:textSize="17dp"
-        tools:ignore="HardcodedText" />
+        android:textColor="@color/black_40"
+        android:textSize="12dp"
+        tools:ignore="HardcodedText"/>
 
 </LinearLayout>
