--- a/app/src/main/res/layout/item_zip_file.xml
+++ b/app/src/main/res/layout/item_zip_file.xml
@@ -18,9 +18,13 @@
         android:id="@+id/item_zip_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="50dp"
         android:layout_marginLeft="68dp"
+        android:layout_marginRight="50dp"
         android:layout_marginStart="68dp"
         android:layout_marginTop="14dp"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:textColor="#b3000000"
         android:textSize="14dp"/>
 
