--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="white_8">#14ffffff</color>
     <color name="white_5">#0Cffffff</color>
     <color name="black_40">#66000000</color>
+    <color name="black_20">#33000000</color>
 
     <!-- home -->
     <color name="main_tab_text_color_select">#B2000000</color>
