--- a/app/src/main/res/layout/activity_clean_ignore_list_group.xml
+++ b/app/src/main/res/layout/activity_clean_ignore_list_group.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:minHeight="50dp"
-                android:background="@android:color/white">
-
-    <ImageView
-        android:id="@+id/clean_ignore_list_group_icon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"
-        android:contentDescription="@null"/>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="40dp"
+    android:background="@android:color/white"
+    android:minHeight="40dp"
+    tools:background="@color/colorAccent">
 
     <TextView
         android:id="@+id/clean_ignore_list_group_title"
@@ -20,15 +15,25 @@
         android:layout_centerVertical="true"
         android:ellipsize="middle"
         android:maxLines="2"
-        android:textColor="#666666"
-        android:layout_marginLeft="60dp"
-        android:textSize="16sp"/>
+        android:layout_marginLeft="16dp"
+        android:textColor="@color/black_40"
+        android:textSize="16dp"
+        tools:text="Big Files"/>
 
-   <!-- <include
-        layout="@layout/common_listview_divider_level0_layout"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/common_listview_divider_height_level0"
+    <ImageView
+        android:id="@+id/iv_ignore_group_indicator"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="6dp"
+        android:layout_marginRight="6dp"
+        android:scaleType="center"
+        android:src="@drawable/down_indicator"
+        tools:background="@color/white"/>
+
+    <View
+        android:layout_height="1dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/common_listview_divider_margin_bottom"/>-->
-
+        android:layout_width="match_parent"
+        android:background="@color/list_divider_line_color_e7e9f3"/>
 </RelativeLayout>
