--- a/app/src/main/res/layout/activity_clean_ignore_list_item.xml
+++ b/app/src/main/res/layout/activity_clean_ignore_list_item.xml
@@ -2,76 +2,55 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:minHeight="70dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="60dp"
+    android:minHeight="60dp"
+    android:orientation="horizontal"
+    android:background="@color/white"
+    tools:background="@color/colorAccent">
 
     <ImageView
         android:id="@+id/clean_ignore_list_item_icon"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_centerVertical="true"
+        android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
+        tools:src="@color/colorPrimary"
         android:contentDescription="@null"/>
 
-    <ImageView
-        android:id="@+id/clean_ignore_list_item_icon_small"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_alignBottom="@id/clean_ignore_list_item_icon"
-        android:layout_alignRight="@id/clean_ignore_list_item_icon"
-        android:contentDescription="@null"/>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/clean_ignore_list_item_title"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="68dp"
+        android:layout_marginStart="68dp"
+        android:textColor="@color/black_70"
+        android:textSize="16sp"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:layout_marginLeft="60dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/clean_ignore_list_item_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:textColor="#333333"
-            android:singleLine="true"/>
-
-        <TextView
-            android:id="@+id/clean_ignore_list_item_subtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:textColor="#666666"
-            android:singleLine="true"/>
-
-    </LinearLayout>
+        tools:text="type some thing"/>
 
     <ImageView
         android:id="@+id/clean_ignore_list_item_remove"
-        android:layout_width="56dp"
+        android:layout_width="60dp"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
         android:checked="true"
         android:contentDescription="@null"
-        android:gravity="center"
-        android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="23dp"
-        android:paddingBottom="23dp"
+        android:gravity="center"
+        android:paddingEnd="16dp"
+        android:paddingLeft="24dp"
+        android:paddingStart="24dp"
+        android:scaleType="center"
+        tools:background="@color/white"
         android:src="@drawable/wl_remove"/>
 
-    <!-- <include
-         layout="@layout/common_listview_divider_level1_layout"
-         android:layout_width="match_parent"
-         android:layout_height="@dimen/common_listview_divider_height_level1"
-         android:layout_alignParentBottom="true"
-         android:layout_marginBottom="@dimen/common_listview_divider_margin_bottom"/>-->
-
     <View
+        android:layout_height="1dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00FFFFFF"
-        android:visibility="gone"/>
-
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="68dp"
+        android:background="@color/list_divider_line_color_f5f6ff"/>
 </RelativeLayout>
