--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,4 +59,10 @@
     <color name="list_divider_line_color_e7e9f3">#e7e9f3</color>
     <color name="list_divider_line_color_f5f6ff">#f5f6ff</color>
     <color name="black_70">#B2000000</color>
+
+
+    <!-- dialog -->
+    <color name="dialog_confirm_color">#39BDAC</color>
+    <color name="dialog_cancel_color">#000000</color>
+
 </resources>
