--- a/app/src/main/res/layout/dialog_base.xml
+++ b/app/src/main/res/layout/dialog_base.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_red_light">
+    android:background="@drawable/bg_dialog">
 
     <FrameLayout
         android:id="@+id/fl_dialog_content"
