--- a/app/src/main/res/layout/item_clean_trash_child.xml
+++ b/app/src/main/res/layout/item_clean_trash_child.xml
@@ -74,4 +74,11 @@
             android:src="@drawable/choose_part"/>
 
     </RelativeLayout>
+
+    <View
+        android:id="@+id/v_child_divider_line"
+        android:layout_marginLeft="68dp"
+        android:background="@color/list_divider_line_color_f5f6ff"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
 </LinearLayout>
