--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,12 +10,14 @@
     <color name="white_50">#7FFFFFFF</color>
     <color name="white_20">#33ffffff</color>
     <color name="white_60">#99ffffff</color>
+    <color name="white_70">#B2ffffff</color>
     <color name="white_80">#ccffffff</color>
     <color name="white_10">#19ffffff</color>
     <color name="white_8">#14ffffff</color>
     <color name="white_5">#0Cffffff</color>
     <color name="black_40">#66000000</color>
     <color name="black_20">#33000000</color>
+    <color name="black_70">#B2000000</color>
 
     <!-- home -->
     <color name="main_tab_text_color_select">#B2000000</color>
@@ -58,7 +60,6 @@
     <color name="clean_trash_bg_blue">#FF44D6C3</color>
     <color name="list_divider_line_color_e7e9f3">#e7e9f3</color>
     <color name="list_divider_line_color_f5f6ff">#f5f6ff</color>
-    <color name="black_70">#B2000000</color>
 
     <!-- dialog -->
     <color name="dialog_confirm_color">#39BDAC</color>
