--- a/app/src/main/res/drawable/botttom_item_selector.xml
+++ b/app/src/main/res/drawable/botttom_item_selector.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
         android:drawable="@color/middle_gray"
-        >
-    </item>
-    <item android:drawable="@color/light_gray"></item>    <!-- 默认字体颜色 -->
+        />
+    <item android:state_focused="true" android:drawable="@color/middle_gray"/>
+    <item android:drawable="@color/light_gray" />    <!-- 默认字体颜色 -->
 </selector>
 
